--- a/Project: When Was the Golden Age of Video Games/readme
+++ b/Project: When Was the Golden Age of Video Games/readme
@@ -1,9 +1,4 @@
 Project Description
-It's not that we humans only take debts to manage our necessities. A country may also take debt to manage its economy. For example, infrastructure spending is one costly ingredient required for a country's citizens to lead comfortable lives. The World Bank is the organization that provides debt to countries.
+In this project, you'll analyze video game critic and user scores as well as sales data for the top 400 video games released since 1977. You'll search for a golden age of video games by identifying release years that users and critics liked best, and you'll explore the business side of gaming by looking at game sales data.
 
-In this project, you are going to analyze international debt data collected by The World Bank. The dataset contains information about the amount of debt (in USD) owed by developing countries across several categories. You are going to find the answers to questions like:
-
-What is the total amount of debt that is owed by the countries listed in the dataset?
-Which country owns the maximum amount of debt and what does that amount look like?
-What is the average amount of debt owed by countries across different debt indicators?
-The data used in this project is provided by The World Bank. It contains both national and regional debt statistics for several countries across the globe as recorded from 1970 to 2015.
+Your search will involve joining datasets and comparing results with set theory. You'll also filter, group, and order data. Make sure you brush up on these skills before trying this project!
